# rtos_subhealth

./: .gitignore  commitlint.config.cjs  package-lock.json  package.json  pnpm-lock.yaml
docs/rfc/: rfc-001-apriltag.md  rfc-002-apriltag-posture-control.md  rfc-003-decision-action.md  rfc-003-execution-layer-spec.md  rfc-004-exec-plan-interface.md  rfc-004-execution-layer-spec.md
docs/tech/: tech-apriltag_selection.md
ros2_ws/: .gitignore
ros2_ws/src/orchestration/exec_layer/: README.md  package.xml  setup.py
ros2_ws/src/orchestration/exec_layer/exec_layer/: exec_layer_node.py
ros2_ws/src/orchestration/exec_layer/resource/: exec_layer
ros2_ws/src/orchestration/ros_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/orchestration/ros_interfaces/action/: ExecTask.action
ros2_ws/src/orchestration/ros_interfaces/msg/: Constraints.msg  Segment.msg
ros2_ws/src/orchestration/ros_interfaces/srv/: PlanPath.srv
ros2_ws/src/perception/apriltag_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/perception/apriltag_interfaces/msg/: ActionStatus.msg  ActionTask.msg  AprilTagDetection.msg  AprilTagDetections.msg
ros2_ws/src/perception/apriltag_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/perception/apriltag_perception/apriltag_perception/: __init__.py  apriltag_node.py
ros2_ws/src/perception/apriltag_perception/config/: apriltag_params.yaml  apriltag_test_params.yaml
ros2_ws/src/perception/apriltag_perception/launch/: apriltag_perception.launch.py  apriltag_perception_test.launch.py
ros2_ws/src/perception/apriltag_perception/test/: README.md  apriltag_topic_integration_test.ipynb
ros2_ws/src/perception/camera_test_publisher/: package.xml  setup.cfg  setup.py
ros2_ws/src/perception/camera_test_publisher/camera_test_publisher/: camera_test_node.py
ros2_ws/src/perception/camera_test_publisher/config/: camera_test_params.yaml  cyclonedds_eth1.xml
ros2_ws/src/perception/camera_test_publisher/launch/: camera_test_publisher.launch.py
ros2_ws/src/perception/camera_test_publisher/test/: camera_topic_integration_test.ipynb
ros2_ws/src/time_publisher/: package.xml  setup.py
ros2_ws/src/time_publisher/time_publisher/: publisher_node.py
