<?xml version="1.0"?>
<package format="3">
  <name>exec_layer</name>
  <version>0.1.0</version>
  <description>Execution layer action server per RFC003/004.</description>
  <maintainer email="puranlai@qq.com">orchestration</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_interfaces</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
