<?xml version="1.0"?>
<package format="3">
  <name>ros_interfaces</name>
  <version>0.1.0</version>
  <description>ROS2 interfaces for decision-exec workflow and planner API.</description>
  <maintainer email="puranlai@qq.com">orchestration</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
